[package]
name = "rust_btc_crud"
version = "0.1.0"
edition = "2021"

# Web framework for Rust
[dependencies.actix-web]
version = "4.0"

# Serialization and deserialization library
[dependencies.serde]
version = "1.0"
features = ["derive"]

# For mapping PostgreSQL rows to Rust structs
[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
tokio-postgres = "0.7" # Asynchronous PostgreSQL driver
actix-files = "0.6.4"
actix-rt = "2.5.0"
once_cell = "1.8.0"
lazy_static = "1.4"


[[bin]]
name = "rust_btc_crud"
path = "src/main.rs"
